--- a/package.xml
+++ b/package.xml
@@ -49,11 +49,11 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>cartesian_interface</build_depend>
+  <!-- <build_depend>cartesian_interface</build_depend> -->
   <build_depend>franka_description</build_depend>
-  <build_export_depend>cartesian_interface</build_export_depend>
+  <!-- <build_export_depend>cartesian_interface</build_export_depend> -->
   <build_export_depend>franka_description</build_export_depend>
-  <exec_depend>cartesian_interface</exec_depend>
+  <!-- <exec_depend>cartesian_interface</exec_depend> -->
   <exec_depend>franka_description</exec_depend>
 
 
